Fix Leave Reply Box Spacing

--- a/sass/_comments.scss
+++ b/sass/_comments.scss
@@ -144,7 +144,6 @@ p.comment-meta {
 .comment-respond, .entry-pings {
     background: none;
     padding: $space-default-half * 3;
-    padding-top: 0;
 
     form {
         padding: $space-default;
